# aero-open-sdk

./: .gitignore  LICENCE  README.md  pyproject.toml
app/: run_gui.py
examples/: GUI_Interface.py  get_info.py  joint_control.py  perform_homing.py  position_torque_switching.py  run_gui.py  run_sequence.py  torque_control.py  trim_servo.py
src/aero_hand_lite/: aero_hand.py  gui.py  joints_to_actuations.py
src/aero_hand_lite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aero_hand_open/: aero_hand.py  gui.py  joints_to_actuations.py
src/aero_open_sdk/: actuations_to_joints.py  aero_hand.py  aero_hand_constants.py  gui.py  joints_to_actuations copy.py  joints_to_actuations.py
