[project]
name = "aero-hand-open"
version = "0.1.8"
description = "This package provides an interface to control the Aero Hand Open robotic hand."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mohit Yadav", email = "mohityadav@tetheria.ai" },
]
maintainers = [
    { name = "Mohit Yadav", email = "mohityadav@tetheria.ai" },
]
license = { text = "CC BY-NC 4.0" }

dependencies = [
    "esptool>=4.7.0",
]

[project.urls]
Homepage = "https://tetheria.ai"
Documentation = "https://docs.tetheria.ai/docs/intro"
GitHub = "https://github.com/TetherIA/aero_hand_open"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
aero-hand-gui = "aero_hand_open.gui:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
